discussion/kv_engine/161177/161177_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42122: Move local doc parsing code to kv_engine

In a future change I will remove the couchstore specifics from the
local doc parsing code (this commit is just a move) so that the local
doc parsing code can then be reused in magma_dump

Change-Id: I5645130722062e9d7b4ab2197d2c137a9e82e4fc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-13 13:36:04.000000000
Message: 
Patch Set 13: Patch Set 12 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-13 13:46:32.000000000
Message: 
Patch Set 13:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39786/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13072/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13072/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13932/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14663/ : ABORTED

ThreadSanitizer issue: data race on vptr (ctor/dtor vs virtual call) /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/platform/src/process_monitor.cc:93 in ProcessMonitorImpl::~ProcessMonitorImpl()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14663/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1974/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1974/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22162/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22162/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33891/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/couchstore/include/libcouchstore/file_ops.h:18:10:
fatal error: "folly/portability/SysTypes.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33891/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12315/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/couchstore/include/libcouchstore/file_ops.h:18:10: error: "folly/portability/SysTypes.h" file not found [clang-diagnostic-error]
#include <folly/portability/SysTypes.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12315/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/couchstore/include/libcouchstore/file_ops.h:18:10:
error: "folly/portability/SysTypes.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1956/ : FAILURE

Compile error at [2021-09-13T13:38:05.336Z] ../couchstore/include/libcouchstore/file_ops.h:18:10:
fatal error: "folly/portability/SysTypes.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1956/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14172/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
